--- a/Event Website/package.json
+++ b/Event Website/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "router": "^1.3.8"
   },
   "devDependencies": {
